--- a/map/templates/map/map.html
+++ b/map/templates/map/map.html
@@ -44,8 +44,8 @@ crossorigin=""></script>
         <!-- L.Icon.Default.prototype.options.iconAnchor = [0, 0]; -->
         <!-- L.Icon.Default.prototype.options.shadowSize = 15; -->
         <!-- L.Icon.Default.prototype.options.shadowAnchor = [0, 0]; -->
-        {% for sighting in sightings %}
-          var point_lat_lon = [{{ sighting.latitude }}, {{ sighting.longitude }}];
+        {% for squirrel in squirrels %}
+          var point_lat_lon = [{{ squirrel.latitude }}, {{ squirrel.longitude }}];
           var marker = L.marker(point_lat_lon).addTo(map);
         {% endfor %}
     </script>
