--- a/sightings/templates/sightings/all.html
+++ b/sightings/templates/sightings/all.html
@@ -1,4 +1,6 @@
 <ul>
+    <button onclick="window.location.href = '/sightings/add'">Add</button>
+    <button onclick="window.location.href = '/sightings/stats'">Stats</button>	
     {% for squirrel in squirrels %}
         <li>
 	    <a href = '/sightings/{{squirrel.unique_squirrel_id}}'>{{squirrel.unique_squirrel_id}}
